add bags
