# services/agentcentral/apis/types.go
@@ -1,0 +1,5 @@
+package apis
+
+type AddBagReq struct {
+	BagDisplayName string `example:"test-bagDisplayName"`
+}
